--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,29 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.application-container{
+  background-color: yellow;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cards-container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: red;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.pokemon-card{
+  width: 14rem;
+  background-color: white;
+  border: solid black 1px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-pagination:focus {
+  background-color: rgb(93, 93, 238);
+}
+
+
+.loading {
+  height: 0;
+  position: relative;
+  top: 6rem;
 }
