--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,38 @@
   position: relative;
   top: 6rem;
 }
+
+/* ----------- Pagination ----------- */
+
+ul.pagination {
+  padding: 0;
+}
+
+.pagination {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+.pagination > .active > a{
+  background-color: #47ccde ;
+  border-color: #47ccde ;
+  color: rgb(0, 0, 0);
+}
+.pagination > li > a{
+  border: 1px solid #000000 ;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+  background-color: rgb(211, 211, 211);
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+  background-color: #47ccde ;
+  border-color: #000000;
+  outline: none ;
+}
+.pagination > li > a, .pagination > li > span{
+  color: #000000
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+  border-radius: unset
+}
